新增文章内容

--- a/source/_posts/魔改美化总结-2.md
+++ b/source/_posts/魔改美化总结-2.md
@@ -294,3 +294,345 @@ nav#pagination {
 ## 归档、分类、标签页文章卡片加上所属分类和标签（轻笑）
 
 {% link 归档、分类、标签页文章卡片加上所属分类和标签以及美化页面,莫言小栈,https://www.myxz.top/posts/a19bb7fb.html %}
+
+## 美化打赏并优化CSS
+{% folding cyan, 请查看教程内容 %}
+效果如下：
+![效果](https://sourceimage.s3.bitiful.net/post%2Fimg%2F%E5%8D%9A%E5%AE%A2%E9%AD%94%E6%94%B9%E6%95%99%E7%A8%8B%E6%80%BB%E7%BB%93(%E4%BA%8C)%2Fdashang.png)
+1. 将以下内容覆盖到[BlogRoot:]\themes\butterfly\layout\includes\post\reward.pug：
+``` PUG
+.post-reward
+  style.
+    .post-reward .reward-button {
+      display: inline-block;
+      padding: .2rem 2rem;
+      background: var(--btn-bg);
+      color: var(--btn-color);
+      cursor: pointer;
+      -webkit-transition: all .4s;
+      -moz-transition: all .4s;
+      -o-transition: all .4s;
+      -ms-transition: all .4s;
+      transition: all .4s;
+    }
+    .tip-button {
+      border: 0;
+      border-radius: 8px;
+      padding: .2rem 1.5rem;
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: -4rem;
+      outline: 0;
+      position: relative;
+      top: 0;
+      transform-origin: 0 100%;
+      transition: transform 50ms ease-in-out;
+      width: auto;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .post-reward {
+      margin-top: 2px !important;
+    }
+  .tip-button.reward-button
+    = ' ' + _p('donate')
+  .reward-main(style="height: 3rem;")
+    ul.reward-all
+      each item in theme.reward.QR_code
+        - var clickTo = item.link ? item.link : item.img
+        li.reward-item
+          a(href=url_for(clickTo) target='_blank')
+            img.post-qr-code-img(src=url_for(item.img) alt=item.text)
+          .post-qr-code-desc(style="MARGIN-TOP: 0!IMPORTANT;")=item.text
+      a.reward-main-btn(href="/about/#about-reward" target="_blank")
+        .reward-text 赞赏者名单
+        .reward-dec 一个博客 一叶孤舟 一方世界
+      style.
+        .reward-main-btn {
+          background: var(--reward-main);
+          color: var(--font-color);
+          display: -webkit-box;
+          display: -moz-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: box;
+          display: flex;
+          -webkit-box-orient: vertical;
+          -moz-box-orient: vertical;
+          -o-box-orient: vertical;
+          -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+          flex-direction: column;
+          border-radius: 12px;
+          padding: 4px 0;
+          border: var(--style-border-always);
+          margin-top: 10px;
+          width: 100%;
+        }
+        .reward-text {
+          margin-bottom: 2px;
+          font-weight: 700;
+          font-size: 18px;
+          padding: 2px 0;
+        }
+        .reward-dec {
+          font-weight: 400;
+          font-size: 14px;
+          padding: 2px 0;
+        }
+```
+
+2. 重启项目，如果是日子对了自动会有弹窗的:
+``` BASH
+hexo cl; hexo s
+```
+{% endfolding %}
+
+## 归档、子分类、子标签文章卡片显示数字？（自用）
+{% folding cyan, 请查看教程内容 %}
+
+1. 打开[Blogroot:]\themes\BUTTERFLY\layout\includes\mixins\article-sort.pug，并覆盖以下内容：
+``` PUG
+mixin articleSort(posts, current)
+  .article-sort
+    - var year
+    - posts.each(function (article, post_index) {
+      - let tempYear = date(article.date, 'YYYY')
+      - let no_cover = article.cover === false || !theme.cover.archives_enable ? 'no-article-cover' : ''
+      - let title = article.title || _p('no_title')
+      if tempYear !== year
+        - year = tempYear
+        .article-sort-item.year= year
+      .article-sort-item(class=no_cover)
+        if article.cover && theme.cover.archives_enable
+          a.article-sort-item-img(href=url_for(article.path) title=title)
+            img(src=url_for(article.cover) alt=title onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'`)
+        .article-sort-item-info(style="margin-left: 10px;")
+          a.article-sort-item-title(href=url_for(article.path) title=title)= title
+          span.article-sort-item-index= (current - 1) * config.per_page + post_index + 1
+          .article-sort-meta
+            .article-meta-wrap
+              if (theme.post_meta.page.categories && article.categories.data.length > 0)
+                span.article-sort-item-categories
+                  i.iconfont.icon-fenlei
+                  each item, index in article.categories.data
+                    a(href=url_for(item.path)).article-meta__categories #[=item.name]
+                    if (index < article.categories.data.length - 1)
+                      span.article-meta__link •
+              if (theme.post_meta.page.tags && article.tags.data.length > 0)
+                span.article-sort-item-tags
+                  i.iconfont.icon-biaoqian
+                  each item, index in article.tags.data
+                    a(href=url_for(item.path)).article-meta__tags #[=item.name]
+                    if (index < article.tags.data.length - 1)
+                      span.article-meta__link •
+            .article-sort-item-time
+              time.post-meta-date-created(datetime=date_xml(article.date) title=_p('post.created') + ' ' + full_date(article.date))= date(article.date, config.date_format)
+    - })
+//- mixin articleSort(posts, current)
+//-   .article-sort
+//-     - var year
+//-     - posts.each(function (article) {
+//-       - let tempYear = date(article.date, 'YYYY')
+//-       - let no_cover = article.cover === false || !theme.cover.archives_enable ? 'no-article-cover' : ''
+//-       - let title = article.title || _p('no_title')
+//-       if tempYear !== year
+//-         - year = tempYear
+//-         .article-sort-item.year= year
+//-       .article-sort-item(class=no_cover)
+//-         a.article-sort-item-a(href=url_for(article.path) title=title)
+//-         if article.cover && theme.cover.archives_enable
+//-           a.article-sort-item-img(href=url_for(article.path) title=title)
+//-             img(src=url_for(article.cover) alt=title onerror=`this.onerror=null;this.src='${url_for(theme.error_img.post_page)}'`)
+//-         .article-sort-item-info
+//-           a.article-sort-item-title(href=url_for(article.path) title=title)= title
+//-           span.article-sort-item-index= (current - 1) * config.per_page + post_index + 1
+//-           .article-sort-meta
+//-             .article-meta-wrap
+//-               if (theme.post_meta.page.categories && article.categories.data.length > 0)
+//-                 span.article-sort-item-categories
+//-                   i.iconfont.icon-fenlei
+//-                   each item, index in article.categories.data
+//-                     a(href=url_for(item.path)).article-meta__categories #[=item.name]
+//-                     if (index < article.categories.data.length - 1)
+//-                       span.article-meta__link •
+//-               if (theme.post_meta.page.tags && article.tags.data.length > 0)
+//-                 span.article-sort-item-tags
+//-                   i.iconfont.icon-biaoqian
+//-                   each item, index in article.tags.data
+//-                     a(href=url_for(item.path)).article-meta__tags #[=item.name]
+//-                     if (index < article.tags.data.length - 1)
+//-                       span.article-meta__link •
+//-             .article-sort-item-time
+//-               time.post-meta-date-created(datetime=date_xml(article.date) title=_p('post.created') + ' ' + full_date(article.date))= date(article.date, config.date_format)
+//-     - })
+```
+
+2. 在自定义文件中添加以下内容：
+``` CSS
+/* 归档，分类，标签三个页面调整 */
+/* 由苏晓河进行编写以及调整 */
+/* 时间：2025年2月4日 */
+/* 归档 */
+.article-sort {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -o-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -o-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -o-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between
+}
+
+.article-sort-title {
+    padding-bottom: 0!important;
+    position: relative;
+    font-size: 2em;
+    color: var(--text-highlight-color);
+    font-weight: 700
+}
+
+.article-sort-item {
+    position: relative;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    margin: 7.5px 0;
+    border-radius: 12px;
+    padding: 8px;
+    width: calc(50% - 7.5px);
+    background: var(--ah-card-bg);
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out
+}
+
+@media screen and (max-width: 768px) {
+    .article-sort-item {
+        width:100%
+    }
+
+    .category-bar-item a {
+        padding: .1rem .2rem
+    }
+}
+
+.article-sort-item.no-article-cover {
+    height: 80px;
+    padding-left: 80px
+}
+
+.article-sort-item.year {
+    font-size: 1.8em;
+    font-weight: 700;
+    margin-bottom: 0;
+    background: 0 0;
+    width: 100%;
+    padding: 0
+}
+
+.article-sort-item.year:hover {
+    background: 0 0
+}
+
+.article-sort-item-title {
+    color: var(--font-color);
+    font-size: 17px;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -o-transition: all .3s;
+    -ms-transition: all .3s;
+    transition: all .3s;
+    -webkit-line-clamp: 2;
+    font-weight: 700;
+    line-height: 1.4em
+}
+
+.article-sort-item-title:hover {
+    color: var(--btn-hover-color)
+}
+
+.article-sort-item-img {
+    overflow: hidden;
+    width: 160px;
+    height: 90px;
+    border-radius: 7px;
+    border: 1px solid var(--ah-hover-bg)
+}
+
+@media screen and (max-width: 768px) {
+    .article-sort-item-img {
+        width: 100px;
+        height: 80px
+    }
+}
+
+.article-sort-item-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 7px
+}
+
+.article-sort-item-info {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    padding-left: 10px;
+    padding: 0!important
+}
+
+.article-sort-item-info a.article-meta__tags {
+    color: var(--dark-grey);
+    font-size: 15px
+}
+
+.article-sort-item-info a.article-meta__tags:hover {
+    color: var(--btn-hover-color)
+}
+
+.article-sort-item-info time.post-meta-date-created {
+    bottom: 10px;
+    right: 10px;
+    position: absolute;
+    font-size: 14px;
+    line-height: 14px;
+    color: var(--dark-grey)
+}
+```
+
+3. 效果展示
+[分类](https://www.myxz.top/categories/hexo/)
+[归档](https://www.myxz.top/archives/)
+{% endfolding %}
