新增文章内容

--- a/source/_posts/搭建基础教程-2.md
+++ b/source/_posts/搭建基础教程-2.md
@@ -2,7 +2,7 @@
 title: Hexo博客搭建基础教程(二)
 description: 从零开始搭建博客
 date: '2024-10-07 8:00'
-ipdate: '2024-10-26 8:00'
+update: '2024-10-26 8:00'
 cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_23.avif'
 category:
   - hexo
