添加wiki页面脚手架（有兴趣可进行fork）

--- a/source/_posts/友链页面美化以及添加功能.md
+++ b/source/_posts/友链页面美化以及添加功能.md
@@ -1,9 +1,9 @@
 ---
-title: Banner随机文章展示(轻笑同款)
-description: 首页显示随机文章，修复一些bug
+title: 友链魔改
+description: 友链页面美化以及添加功能
 date: '2025-04-19 10:00'
 updated: '2025-04-19 12:09'
-cover: https://sourceimage.s3.bitiful.net/img/default_cover_18.avif
+cover: 'https://sourceimage.s3.bitiful.net/img/default_cover_18.avif'
 category:
   - hexo
 top_img: false
@@ -11,6 +11,7 @@ tags:
   - hexo
   - butterfly
   - 美化
+abbrlink: 23254
 ---
 
 ## 前言
